examples/test/testpolicy14345.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14345
  namespace: namespace415
spec:
  podSelector:
    matchLabels:
      key0: value49
      key3: value43
      key45: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value49
      podSelector:
        matchLabels:
          key10: value24
